--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,13 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    "paths": {
+      "testingdev": [
+        "dist/testingdev/testingdev",
+        "dist/testingdev"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
